# JNI_Demo

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jni/ndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_jni_ndk_Cryptor.h  com_jni_ndk_DecodeYUV.h  com_jni_ndk_FFmpegPlayer.h  com_jni_ndk_FileNative.h  com_jni_ndk_PosixThread.h  com_jni_ndk_SoundUntil.h  cryptor.c  decode_yuv.c  file.c  fmod_local.cpp  nice_ffmpeg_play.c  posix_thread.c
app/src/main/java/com/jni/ndk/: Cryptor.java  DecodeYUV.java  FFmpegPlayer.java  FileNative.java  MainActivity.kt  PlaySoundActivity.kt  PosixThread.java  SoundUntil.java  UUIDUtils.java  VideoView.java
app/src/main/res/layout/: activity_main.xml  activity_play_sound.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jni/ndk/: ExampleUnitTest.kt
